# inference-pico

./: CMakeLists.txt  restart.sh
lib/ST7735_TFT_PICO/: CMakeLists.txt
lib/ST7735_TFT_PICO/examples/ST7735_TFT_TESTS/: main.cpp
lib/mic/: analog_microphone.cpp
source/: README.txt  hw_config.c  main.cpp  mainbackup.cpp  sd_write.c
